[package]
name = "crypto_notifier"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
actix = "0.13"
actix-web-actors = "4.2"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
dashmap = "5.5"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4.41", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
